# strawberry-msgspec

./: pyproject.toml
poetry_template/: __main__.py
